<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/background"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp">
        
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:background="@color/card_color">
	    
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="230dp">
	        
			<ImageView 
			    android:layout_width="match_parent"
			    android:layout_height="200dp"
			    android:id="@+id/person_cover"
			    android:contentDescription="@string/app_name"
			    android:scaleType="centerCrop"/>
			
			<ImageView 
			    android:layout_width="100dp"
			    android:layout_height="100dp"
			    android:id="@+id/person_avatar"
			    android:layout_marginLeft="20dp"
			    android:scaleType="fitXY"
			    android:contentDescription="@string/app_name"
			    android:layout_alignParentBottom="true"/>
	        
	    </RelativeLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/person_name"
		        android:layout_marginLeft="20dp"
		        android:textSize="18sp"
		        android:textStyle="bold"
		        android:gravity="bottom"
		        android:textColor="@color/text_name"/>
	        
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/person_location"
		        android:layout_marginLeft="20dp"
		        android:textSize="14sp"
		        android:gravity="bottom"
		        android:textColor="@color/text_content"/>
		    
	    </LinearLayout>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/person_verified_reason"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:textSize="14sp"
	        android:textColor="@color/text_content"/>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/person_description"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:textSize="14sp"
	        android:textColor="@color/text_content"/>
	    
	    <ImageView 
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginTop="10dp"
	        android:id="@+id/status_divider"
	        android:contentDescription="@string/app_name"
	        android:background="@drawable/divider"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_weight="1"
	            android:id="@+id/person_follow_layout"
	            android:background="@drawable/btn_layout_background"
	            android:clickable="true"
	            android:padding="10dp"
	            android:gravity="center">
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/person_follow"
	                android:textSize="13sp"
	                android:textColor="@color/text_button"/>
	            
	            <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/person_follow"
		            android:layout_marginLeft="5dp"
		            android:textSize="13sp"
	                android:textColor="@color/text_button"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_weight="1"
	            android:id="@+id/person_follower_layout"
	            android:background="@drawable/btn_layout_background"
	            android:clickable="true"
	            android:padding="10dp"
	            android:gravity="center">
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/person_follower"
	                android:textSize="13sp"
	                android:textColor="@color/text_button"/>
	            
	            <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/person_follower"
		            android:layout_marginLeft="5dp"
		            android:textSize="13sp"
	                android:textColor="@color/text_button"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_weight="1"
	            android:id="@+id/person_status_layout"
	            android:background="@drawable/btn_layout_background"
	            android:clickable="true"
	            android:padding="10dp"
	            android:gravity="center">
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/person_status"
	                android:textSize="13sp"
	                android:textColor="@color/text_button"/>
	            
	            <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/person_status"
		            android:layout_marginLeft="5dp"
		            android:textSize="13sp"
	                android:textColor="@color/text_button"/>
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	</LinearLayout>

</android.support.v7.widget.CardView>
